--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,22 @@
-# Konfigurasi dasar untuk build
-[build]
-  # Direktori tempat file-file fungsi serverless Anda berada
-  functions = "netlify/functions"
-  # Direktori yang akan di-publish (root folder karena ini situs statis)
-  publish = "/"
+# File konfigurasi untuk Netlify
 
-# Aturan redirect untuk membuat URL API lebih bersih
+[build]
+  # Direktori tempat file-file publik Anda berada (index.html, dll.)
+  # Karena file-file tersebut ada di root, kita bisa gunakan "."
+  publish = "."
+  
+  # Direktori tempat serverless functions Anda berada
+  functions = "netlify/functions"
+
+# Pengaturan untuk server development lokal (opsional, tapi berguna)
+[dev]
+  # Port default untuk `netlify dev`
+  port = 8888
+  publish = "."
+  functions = "netlify/functions"
+
+# Aturan redirect agar fungsi bisa diakses dengan mudah
 [[redirects]]
-  # URL yang akan digunakan di frontend (index.html)
   from = "/api/*"
-  # URL fungsi serverless yang sebenarnya
   to = "/.netlify/functions/:splat"
-  # Kode status 200 berarti ini adalah rewrite (URL tidak berubah di browser)
   status = 200
